# paperwithcode-hf-mcp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/paperwithcode_mcp/: __init__.py  __main__.py  client.py  mcp_server.py  parser.py  resolver.py
tests/: test_client.py  test_import.py  test_mcp_server.py  test_parser.py  test_resolver.py
